# the-dozens-django

./: .db_init.sql  .djlintrc  .env.vault  .gitignore  .pre-commit-config.yaml  .pylintrc  init.sql  makefile  pyproject.toml  requirements.txt
thedozens/: manage.py  schema.json  schema.py
thedozens/API/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
thedozens/API/migrations/: 0001_initial.py  0002_alter_insult_last_modified.py  0003_insultreview.py  0004_alter_insultreview_insult_id.py  0005_alter_insultreview_insult_id.py  0006_alter_insult_options.py
thedozens/graphQL/: apps.py  mutations.py  query.py  schema.py  subscriptions.py  type.py  urls.py
thedozens/static/js/: scripts.js
thedozens/staticfiles/css/: styles.css
thedozens/templates/: index.html  swagger-ui.html
thedozens/thedozens/: asgi.py  settings.py  test.py  test_settings.py  urls.py  wsgi.py
